--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #D6D6D6;
 }
 
 .App-logo {
@@ -47,17 +48,26 @@
   src: url(../fonts/Montserrat/static/Montserrat-Regular.ttf);
 }
 
-.header {
+.header h1{
   background-color:  #D9D9D9;
-  padding:2% 10%;
+
   font-family: Montserrat;
   font-style: italic;
-  font-weight: 900;
-   
+  font-weight:bolder;
+  font-size: 5em;
+}
+
+.header h4 {
+  font-size: 1.4em;
+  background-color:#a3a2a2;
 }
 
 .navbar {
   background-color:#525252;
-  margin: 0 10%;
-  padding: 20%;
-}
+  display: flex;
+  font-family: Montserrat;
+  font-weight: 800;
+  font-style: italic;
+} 
+
+
