--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-
 }
 
 .App-logo {
@@ -85,12 +84,15 @@
   font-weight: bold;
 }
 
+.content {
+  padding-top: 3.5em;
+}
+
 .navbar {
 
   display: flex;
   font-weight: 800;
   font-style: italic;
-  margin-bottom: 3.5em;
   border-bottom: 3px solid #707070;
   position: fixed;
   top: 0;
@@ -203,9 +205,19 @@
 
 .acheter {
   font-size: large;
-  font-family: Montserrat;
-  background-color: #707070;
+  font-family: newspaper;
+}
 
+.acheter h3 {
+  font-family: Blacktail;
+  border-bottom: #464660 solid;
+  display: inline-block;
+  margin-bottom: 1.5em;
+}
+
+.acheter input {
+  border-radius: 20px;
+  background-color: #f5f5f5 ;
 }
 
 .acheter .row {
