--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,18 @@
   border-radius: 4em;
 }
 
+.title div{
+  font-family: newspaper;
+  font-size: 1.1em;
+  margin: 1em;
+
+}
+
+.title img {
+  border-radius: 20px;
+}
+
+
 .todayArticles {
 
 }
